--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,7 @@
 /*=======================*/
 body {
 	text-align: center;
+	 font-family: 'GidoleRegular';
 	
  }
  .bg{background:#CBEAFF}
@@ -45,19 +46,19 @@ header { background: rgba(0,0,0,0.7); height:90px; z-index:2; position:absolute;
 	margin-top: 20px;
 }
 /*download*/
-.download-guide-book{ border-bottom: solid 3px #3876AE; border-top: solid 3px #3876AE; background:#3389D7; color:#fff; padding:40px 0; font-family:"Comic Sans MS", cursive}
+.download-guide-book{ border-bottom: solid 3px #3876AE; border-top: solid 3px #3876AE; background:#3389D7; color:#fff; padding:40px 0;  }
 .download-guide-book .container{ position:relative; text-align:left}
 .caption-dl{ display:inline-block; width:60%; font-size:1.2em; color:#ddd}
-.tt-dl{ font-size:2.5em; font-weight:normal}
-.btn-mn{ color:#fff; padding:8px 20px; background:#333; border-radius:3px; border-bottom:solid 3px #111; 
+.tt-dl{ font-size:2.5em; font-weight:normal; font-family: 'BebasNeueRegular';}
+.btn-mn{ color:#fff; padding:8px 20px; background-color:#333; border-radius:3px; border-bottom:solid 3px #111; 
 
- position:absolute; right:30px; top:40%; font-size:1.1em; font-weight:bold}
- .btn-mn:hover{ color:#fff; background:#2ECD71; border-color:#27AE5F}
+ position:absolute; right:30px; top:40%; font-size:1.1em; padding-right:25px  }
+ .btn-mn:hover{ color:#fff; background-color:#19BD9B; border-color:#17A086}
  /*hot tour*/
  .hot-tour{ position:relative; margin:15px 0;}
  .tt-ht{ position:absolute; right:-18px; top:20px; z-index:3; text-align:right }
  .slide-ht{ position:relative; z-index:2}
- .tt-ht .tt{background:#E84C3D; padding:10px 20px; color:#fff; clear:both; display:inline-block; width:100%; font-size:2em; font-family:"Comic Sans MS", cursive; font-weight:bold}
+ .tt-ht .tt{background:#E84C3D; padding:10px 20px; color:#fff; clear:both; display:inline-block; width:100%; font-size:2em; font-family:"BebasNeueRegular" ; text-align:center }
  .caret-ht{ width:0; height:0; border-color:#000; width: 0px;
     height: 0px;
     border-style: solid;
@@ -66,8 +67,7 @@ header { background: rgba(0,0,0,0.7); height:90px; z-index:2; position:absolute;
     border-right-color: transparent; clear:both}
 	/*most tour*/
 	.most-tour{ width:100%; display:inline-block; margin-bottom:20px}
-	.tt-mt{ height:1px; background:#2A80B9; text-align:center; margin:40px 0; position:relative; width:100%;font-family:"Comic Sans MS", cursive
-	 }
+	.tt-mt{ height:1px; background:#2A80B9; text-align:center; margin:40px 0; position:relative; width:100%;font-family: 'BebasNeueRegular';}
 	.mt-s{   color:#000; background:#fff; padding:5px;display:inline-block; margin-top:-30px;}
 	.mt-s b{ padding:5px 30px; display:inline-block; font-size:2em; font-weight:normal; background:#3598DC; color:#fff; border-bottom: solid 2px #2A80B9 }
 	.view-all-lst{ text-align:center; margin:10px;}
@@ -78,13 +78,14 @@ header { background: rgba(0,0,0,0.7); height:90px; z-index:2; position:absolute;
 	.img-mt{ position:relative}
 	.tour-mt .img-mt img{ width:100%; position:relative; z-index:2;}
 	.des-mt{ position:absolute; bottom:0px ;left:0; width:100%; padding:10px; z-index:3}
-	.des-mt p{ display:inline-block; padding:7px  20px; background: rgba(0,0,0,0.6); color:#fff; font-weight:bold}
-	.price-mt{ float:right; color:#3598DC; font-family:"Comic Sans MS", cursive; padding-left:20px}
+	.des-mt p{ display:inline-block; padding:7px  20px; background: rgba(0,0,0,0.6); color:#fff; }
+	.price-mt{ float:right; color:#3598DC; font-family:'BebasNeueRegular'; padding-left:20px}
 	.price-mt:hover{ color:#BEC3C7}
 	
 	.more-mt { position:absolute; top:40px; right:6px; z-index:4}
-	.more-s{ padding:5px 7px ; display:inline-block; background:#3598DC; color:#fff; clear:both; display:inline-block; width:100%;font-family:"Comic Sans MS", cursive; font-weight:bold}
+	.more-s{ padding:5px 7px ; display:inline-block; background:#3598DC; color:#fff; clear:both; display:inline-block; width:100%;}
 	.more-s:hover{ background-color:#BF3A2B}
+	.more-s a{ font-weight:400; color:#fff} 
 	.more-mt a{ color:#fff}
 	.caret-mt{ width:0; height:0; border-color:#000; width: 0px;
     height: 0px;
@@ -92,17 +93,17 @@ header { background: rgba(0,0,0,0.7); height:90px; z-index:2; position:absolute;
     border-width: 10px 10px 0 0;
     float: right;
     border-right-color: transparent; clear:both}
-	.day-of-mt{ width:100%; display:inline-block; text-align:center; font-size:1em; font-weight:bold; color:#95A4A7; font-family:"Comic Sans MS", cursive; margin:7px}
+	.day-of-mt{ width:100%; display:inline-block; text-align:center; font-size:1em;   color:#95A4A7;   margin:7px}
 	
 	
 	/*footer*/
 	.footer .container{ position:relative; text-align:left;}
 	.footer{ background:#323232; color:#A5A5A5; padding:15px 0; }
 	.footer address{ font-style:normal; display:inline-block; vertical-align:top}
-	.tt-ft{ color:#3598DC; font-size:1.2em; font-weight:400; text-transform:uppercase; margin-bottom:5px; vertical-align:top; font-family:"Comic Sans MS", cursive}
+	.tt-ft{ color:#3598DC; font-size:1.2em; font-weight:400; text-transform:uppercase; margin-bottom:5px; vertical-align:top; }
 	.col-ft{ display:inline-block; padding-left:25px;vertical-align:top}
 	.footer  map img{ width:270px; margin-bottom:10px;}
-	.copyright{ border-top:#1E1E1E 1px solid; text-align:center; margin-top:20px; font-weight:bold; font-family:"Comic Sans MS", cursive; display:inline-block; width:100%}
+	.copyright{ border-top:#1E1E1E 1px solid; text-align:center; margin-top:20px;   ; display:inline-block; width:100%}
 	.copyright span{ width:100%; border-top:#494949 1px solid; text-align:center; display:inline-block; vertical-align:top; padding-top:15px;}
 	.paypal{ position:absolute; top :70%; right:300px}
 	.paypal img{ width:200px;}
@@ -149,9 +150,9 @@ header { background: rgba(0,0,0,0.7); height:90px; z-index:2; position:absolute;
 /*section2*/
 .section2 { background:#F9F9F9; border-top: solid 1px #EBEBEB;  border-bottom: solid 1px #EBEBEB; width:100%; display:inline-block; margin:25px 0; padding:20px 0;}
 .col-sp{ text-align:left; padding-left:15px;}
-.tt-sp{ font-size:1.8em; text-align:left; color:#333; margin-bottom:10px; text-transform:capitalize; font-family:"Comic Sans MS", cursive}
+.tt-sp{ font-size:1.8em; text-align:left; color:#333; margin-bottom:10px; text-transform:capitalize; font-family:'BebasNeueRegular';}
 .sp-item img{ width:20px; display:inline-block}
-.sp-item span{  display:inline-block; vertical-align:top; font-weight:bold}
+.sp-item span{  display:inline-block; vertical-align:top; }
 .sp-item {  display:inline-block; margin:7px 0; width:100%}
 .tt-sp i{ color:#3389D7}
 
@@ -166,11 +167,13 @@ header { background: rgba(0,0,0,0.7); height:90px; z-index:2; position:absolute;
 	color: #003D69
 }
 .photo-media img {
-	width: 150px;
+	max-width: 250px;
 	margin-right: 15px;
 	float: left;
-	border: solid 1px #ccc
+	border: solid 1px #eee;
+	-webkit-box-shadow: 4px 5px 0 0 #ddd;
 }
+.photo-media img:hover{-webkit-box-shadow: 0px 0px 0 0 #2A80B9;border: solid 1px #2A80B9;}
 .text-media {
 }
 .tt-media a {
@@ -197,7 +200,32 @@ header { background: rgba(0,0,0,0.7); height:90px; z-index:2; position:absolute;
 .side>div {
 	margin-bottom: 10px;
 }
-.date-time-news{ color:#95A4A7; font-weight:bold}
+.date-time-news{ color:#95A4A7; }
+.detail-news { line-height:160%;}
+.detail-news img{ margin:10px 0}
+.tt-detail-news{font-weight:normal; font-size:1.5em; margin-bottom:10px;}
+.function {
+	width: 100%;
+	float: left;
+	border-bottom: dotted 1px #ddd;
+	border-top: dotted 1px #ddd;
+	padding: 5px 0;
+	margin:10px 0;
+}
+.shareBox {
+	float: left;
+	margin-left: 5px;
+}
+.toolbarBox {
+	float: right;
+	margin-right: 5px;
+}
+.toolbarBox a {
+	margin-right: 10px;
+}
+.toolbarBox i {
+	margin-right: 5px
+}
 /*===========================media*/
 
 /*project*/
@@ -210,7 +238,7 @@ header { background: rgba(0,0,0,0.7); height:90px; z-index:2; position:absolute;
     width: 100%;
 	border: 8px solid #f2f2f2;
 }
-.detail-link{ color:#0F507E; padding-top:15px; display:inline-block; font-weight:bold}
+.detail-link{ color:#0F507E; padding-top:15px; display:inline-block; }
 /*===============================tim kiem*/
 .search {
 	float:left;
@@ -262,7 +290,7 @@ header { background: rgba(0,0,0,0.7); height:90px; z-index:2; position:absolute;
 	cursor: default;
 	line-height: 20px;
 	color: #fff;
-	font-weight: bold;
+	 
 	display:inline-block
 }
 .btn-search:hover, .btn-close:hover {
@@ -274,13 +302,13 @@ header { background: rgba(0,0,0,0.7); height:90px; z-index:2; position:absolute;
 .iblock{ margin:20px 0; width:100%; display:inline-block}
 .destinations-it{ width:33.33%; padding:25px; float:left
 }
-.destinations-tt{ width:100%; display:inline-block; text-align:left; padding:10px 15px; font-size:1.8em; color:#2A80B9; font-family:"Comic Sans MS", cursive; text-transform:uppercase }
+.destinations-tt{ width:100%; display:inline-block; text-align:left; padding:10px 15px; font-size:1.8em; color:#2A80B9;font-family: 'BebasNeueRegular'; text-transform:uppercase }
 .slide  .destinations-it{ width:100%;}
 .inner-dt{-webkit-box-shadow: 4px 5px 0 0 #ddd);
 box-shadow: 4px 5px 0 0 #ddd; width:100%; display:inline-block; background:#fafafa; position:relative}
 .img-dt { width:100%;}
  .img-dt img { width:100%; margin-bottom:10px;}
-.tt-dt{ width:100%; text-align:left; color:#929497; font-weight:bold; font-size:12px; text-transform:uppercase; padding-left:5px; background:url(../images/bg-dt-1.png)top right no-repeat; background-size: auto  ; padding:5px; font-family:inherit}
+.tt-dt{ width:100%; text-align:left; color:#929497;  font-size:12px; text-transform:uppercase; padding-left:5px; background:url(../images/bg-dt-1.png)top right no-repeat; background-size: auto  ; padding:5px; font-family:inherit}
 
 .over-dt{
 	display:inline-block; vertical-align:top;
@@ -288,7 +316,7 @@ box-shadow: 4px 5px 0 0 #ddd; width:100%; display:inline-block; background:#fafa
 	display:none; background:#fff; border: solid 1px #ccc;	
 }
 .inner-dt:hover .over-dt{ display:block} 
-.tt-over-dt{width:100%; text-align:left; color:#fff; font-weight:bold; font-size:1.1em; text-transform:uppercase; padding:5px; background:#046CAA; background:#046CAA url(../images/bg-dt-2.png)top right no-repeat;}
+.tt-over-dt{width:100%; text-align:left; color:#fff;   font-size:1.1em; text-transform:uppercase; padding:5px; background:#046CAA; background:#046CAA url(../images/bg-dt-2.png)top right no-repeat;}
 .txt-dt{ font-style:italic; text-align:justify; padding:10px; color:#333}
 .detail-dt{ width:100%; display:inline-block; padding:10px 15px; text-align:right; font-size:18px  }
 .detail-dt i{font-size:25px }
@@ -298,14 +326,33 @@ box-shadow: 4px 5px 0 0 #ddd; width:100%; display:inline-block; background:#fafa
 }
 .navy{ padding-right:15px;}
 .navy ul li{ padding:10px 0; padding-left:20px; padding-right:10px; border-bottom: dotted 1px #ccc; position:relative}
-.navy ul li a h2{ color:#2A80B9; font-size:1.2em; }
+.navy ul li a h2{ color:#2A80B9; font-size:1.2em; font-weight:400}
 .navy li i.fa { position:absolute; top:15px; left:9px; color:#2A80B9}
 .navy ul li:hover{ background:#CBEAFF}
 .col-nav{ padding-left:0}
-h1.tt-detail{ font-size:1.3em; padding-bottom:5px; border-bottom: solid 1px #2A80B9; text-transform:uppercase; color:#2A80B9; margin-bottom:15px;}
+h1.tt-detail{ font-size:1.6em; padding-bottom:5px; border-bottom: solid 1px #2A80B9; text-transform:uppercase; color:#2A80B9; margin-bottom:15px; font-weight:normal; }
+
 .txt-destination{ margin-top:20px; display:inline-block; width:100%}
-.btn-order{ float:right; padding:2px 10px; background:#3598DC; border-bottom:solid 2px #2A80B9; color:#fff; font-size:12px;}
+.btn-order{ float:right; padding:2px 10px; background:#3598DC; border-bottom:solid 2px #2A80B9; color:#fff; font-size:12px; font-weight:400}
 .btn-order:hover { color:#fff; background:#2ECD71; border-color:#27AE5F}
+
+
+/*book tour*/
+.txt-bt{ width:100%; padding:5px 10px;  height:37px; margin:5px 0; border:0; background-color: #f1f1f1;
+    box-shadow: inset 3px 3px #d7d7d7;-webkit-border-radius: 3px;
+border-radius: 3px;}
+.txt-bt:focus{outline: none;background-color: #3598DC;
+    box-shadow: inset 3px 3px #2A80B9;}
+	.frm-book-tour{ width:100%; padding:15px 15%;}
+.frm-book-tour p{ margin:10px 0}
+textarea.txt-bt{ min-height:100px; resize:vertical;}
+.btn-mn{ background-image: url(../images/bg-btn.png); background-position:right; background-repeat:no-repeat; background-size:auto 90%; }
+.btn-bt{ padding:7px 20px; background:url(../images/bg-btn.png) right no-repeat; background-color:#3598DC; display:inline-block; margin-right:10px; background-size:auto 90%; border-bottom:solid 3px #2A80B9; color:#fff; font-family:"Comic Sans MS", cursive; font-size:1.1em; padding-right:30px; -webkit-border-radius: 3px;
+border-radius: 3px;}
+.btn-bt:hover{ background-color:#19BD9B; border-color:#17A086; color:#fff}
+.txt-bt.captcha{ width:60%; display:inline-block; vertical-align:top}
+.cht img{ display:inline-block; vertical-align:top; position:relative; top:4px}
+.text-bt{ font-size:1.2em; line-height:160%}
 @media (max-width:960px){
 	.tour-mt{ width:50%}
 	.col-ft{ width:40%; padding :10px;   }
@@ -323,6 +370,13 @@ h1.tt-detail{ font-size:1.3em; padding-bottom:5px; border-bottom: solid 1px #2A8
 	.social{ float:left; text-align:left}
 	.download-guide-book .container{ padding-left:10px;}
 	header { background: rgba(0,0,0,1); height:auto; z-index:2; position:relative; top:0px}
-	.brand{ width:100%; text-align:center}
+	.brand{ width:100%; text-align:center};
+	.photo-media img {
+	max-width: 150px;}
+	.col-nav{ margin-bottom:20px;}
 }
-@media (max-width:480px){.col-ft{ width:100%;}}
+@media (max-width:480px){.col-ft{ width:100%;}
+.photo-media img {
+	max-width: 100%; clear:both; margin:10px 0}
+.iblock{ padding-left:10px; padding-right:10px}	
+}
