+ blog.htm + detailbolg.htm

--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -11,4 +11,15 @@
 	src: url(../fonts/GidoleRegular.eot);
 	src: url(../fonts/GidoleRegular.eot) format('embedded-opentype'), url(../fonts/GidoleRegular.otf) format('otf'), url(../fonts/GidoleRegular.woff) format('woff'), url(../fonts/GidoleRegular.ttf) format('truetype'), url(../fonts/GidoleRegular.svg) format('svg'); font-weight:400 !important
 }
+
+ @font-face {
+	font-family: 'OpenSans';
+	src: url(../fonts/OpenSans.eot);
+	src: url(../fonts/OpenSans.eot) format('embedded-opentype'), url(../fonts/OpenSans.otf) format('otf'), url(../fonts/OpenSans.woff) format('woff'), url(../fonts/OpenSans.ttf) format('truetype'), url(../fonts/OpenSans.svg) format('svg'); font-weight:400 !important
+}
  
+  @font-face {
+	font-family: 'OpenSans-Bold';
+	src: url(../fonts/OpenSans-Bold.eot);
+	src: url(../fonts/OpenSans-Bold.eot) format('embedded-opentype'), url(../fonts/OpenSans-Bold.otf) format('otf'), url(../fonts/OpenSans-Bold.woff) format('woff'), url(../fonts/OpenSans-Bold.ttf) format('truetype'), url(../fonts/OpenSans-Bold.svg) format('svg'); font-weight:400 !important
+}
